# apteryx

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  default_config.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.sh  utils.py
data/showcase/kiwi/: kaki_day_9_m3_04_back.hdr  kiwi_day_01_01_back.hdr  kiwi_day_10_27_back.hdr
modules/: about.py  camera.py  chatbot.py  comparison.py  components.py  datacube.py  feedback.py  help.py  inference.py  kiwi_benefits.py  visualization.py
